--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
+<!-- <script src="./scripts/getData.js" type="module"></script> -->
+<script src="./scripts/script.js" type="module"></script>
+<!-- <script src="./scripts/showData.js" type="module"></script> -->
 </body>
 
 </html>
